<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre_mascota">Catty</string>
    <string name="nombre_mascota_01">Catty</string>
    <string name="nombre_mascota_02">Ronny</string>
    <string name="nombre_mascota_03">Max</string>
    <string name="nombre_mascota_04">Tex</string>
    <string name="nombre_mascota_05">Tita</string>
    <string name="nombre_mascota_06">Tony</string>
    <string name="nombre_mascota_07">Ruffo</string>
    <string name="nombre_mascota_08">Silver</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="menu_configurar">Configurar Cuenta</string>
    <string name="mascotas_favoritas">favoritas</string>
    <string name="campo_nombre">Nombre Completo</string>
    <string name="campo_email">Correo Electrónico</string>
    <string name="campo_mensaje">Mensaje</string>
    <string name="texto_enviar">Enviar Comentario</string>
    <string name="titulo_biografia">DESARROLLADOR</string>
    <string name="nombre_biografia">Andres Nasmuta Granja</string>
    <string name="profesion_biografia">Ingeniero de Sistemas - Tecnólogo en Computación</string>
    <string name="universidad_biografia">Universidad de Nariño</string>
    <string name="nacionalidad_biografia">Pasto - Nariño - Colombia</string>
    <string name="contactanos">Contactános</string>
    <string name="titulo_configuracion">Petagram</string>
    <string name="campo_usuario_cuenta">Escribe tu usuario</string>
    <string name="texto_guardar_cuenta">Guardar Cuenta</string>
    <string name="menu_notificaciones">Recibir Notificaciones</string>
    <string name="mensaje_agregar_cuenta">Agregar cuenta en "Configurar Cuenta" en el menú de opciones</string>
    <string name="agregar_cuenta_firebase">Cuenta de Instagram agregada con exito a FireBase</string>
    <string name="texto_ver_perfil">Ver Perfil</string>
    <string name="texto_ver_usuario">Ver Usuario</string>
</resources>