<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mContacto"
        android:title="@string/menu_contacto"
        android:orderInCategory="100"></item>
    <item
        android:id="@+id/mAcerca"
        android:title="@string/menu_acerca"
        android:orderInCategory="101"></item>
    <item
        android:id="@+id/mConfigurar"
        android:title="@string/menu_configurar"
        android:orderInCategory="102"></item>
    <item
        android:id="@+id/mNotificaciones"
        android:title="@string/menu_notificaciones"
        android:orderInCategory="102"></item>
    <item
        android:id="@+id/mRanking"
        android:title="Ranking"
        android:orderInCategory="103"
        app:showAsAction="always"
        android:icon="@drawable/christmas_star"></item>
</menu>