<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurarActivity">

    <TextView
        android:id="@+id/tvTituloConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_configuracion"
        android:padding="@dimen/main_padding"
        android:textSize="@dimen/texto_titulo_configuracion"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <RelativeLayout
        android:id="@+id/rlUsuarioCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTituloConfiguracion"
        android:paddingLeft="@dimen/padding_campo_usuario_cuenta"
        android:paddingRight="@dimen/padding_campo_usuario_cuenta"
        android:layout_marginTop="@dimen/margin_campo_usuario_cuenta">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_usuario_cuenta"
            android:focusableInTouchMode="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuarioCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btnGuardarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_guardar_cuenta"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rlUsuarioCuenta"
        android:layout_marginTop="@dimen/margin_guardar_cuenta"
        android:theme="@style/BotonRaised"></Button>
</RelativeLayout>